Project directory Check-1

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                     <td>Vintage Cars Investment(link/being updated)</td>
                 </tr>
                 <tr>
-                    <td> Scrape & Analysis data on used vans for sale in the UK(link/being updated)</td>
+                    <td> Scrape & Analysis data on used vans for sale in the UK(link/being updated) </td>
+                    <td> <a href="projects/datanalytics/1CaseStudy/2RDataViz.html">Contact US Please</a> </td>
+
                 </tr>
 
             </tbody>
