--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
       <h2>Projects</h2>
       <table cellpadding="5" cellspacing="0">
           <tbody>
-                <tr>
-                    <td>Vintage Cars Investment(link/being updated)</td>
-                </tr>
-                <tr>
-                    <td> Scrape & Analysis data on used vans for sale in the UK(link/being updated) </td>
-                    <td> <a href="projects/datanalytics/1CaseStudy/2RDataViz.html">Contact US Please</a> </td>
-
-                </tr>
-
-            </tbody>
+          <tr>
+              <td> <a href="projects/myprojects.html">Data Analytics</a> </td>
+          </tr>
+          <tr>
+              <td> <a href="projects/myprojects.html">Web Scrapping</a> </td>
+          </tr>
+          <tr>
+              <td> <a href="projects/myprojects.html">Python Development</a> </td>
+          </tr>
+          </tbody>
         </table>
 
 
