google search api

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </ul>
       <hr size="2" noshade>
       <a href="hobbies.html" >LinkedIn</a>
-      <a href="contact.html">GitHub</a>
-      <a href="contact.html">Kaggle</a>
+      <a href="https://hasank09.github.io/profile/">GitHub</a>
+      <a href="https://www.kaggle.com/muhammadhasankhokahr">Kaggle</a>
   </body>
 </html>
