--- a/projects/myprojects.html
+++ b/projects/myprojects.html
@@ -76,9 +76,21 @@
             </tr>
             </thead>
             <tr>
-              <td>Details Being Updated</td>
-              <td>Details Being Updated</td>
-              <td> Details Being Updated</td>
+              <td>Flight Search with API and SMS Alert through TWILLO</td>
+              <td>Used API:<br>
+                  Sheety for Gsheet<br>
+                  TEQUILA_API for flight search<br>
+                  programmatically sending SMS with Twillo API<br>
+                  Used OOP(object Oriented Programming)
+              </td>
+              <td> <a href="https://github.com/hasank09/Python/blob/main/Twillo-api/readme.md">Project File</a></td>
+          </tr>
+            <tr>
+              <td>Google Search API</td>
+              <td> Programmatically get search result<br>
+                  usage as per need for example : lead generation and etc
+              </td>
+              <td> <a href="https://github.com/hasank09/Python/blob/main/Googleapi/readme.md">Project File</a></td>
           </tr>
         </table>
         <hr size="2" noshade>
