--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       <table cellpadding="5" cellspacing="0">
           <tbody>
           <tr>
-              <td> <a href="projects/myprojects.html">Data Analytics</a> </td>
+              <td> <a href="projects/data_analytics.html">Data Analytics</a> </td>
           </tr>
           <tr>
-              <td> <a href="projects/myprojects.html">Web Scrapping</a> </td>
+              <td> <a href="projects/python.html">Web Scrapping</a> </td>
           </tr>
           <tr>
-              <td> <a href="projects/myprojects.html">Python Development</a> </td>
+              <td> <a href="projects/webscrapping.html">Python Development</a> </td>
           </tr>
           </tbody>
         </table>
