--- a/projects/webscrapping.html
+++ b/projects/webscrapping.html
@@ -11,46 +11,26 @@
         <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-
-        <hr size="2" noshade>
-        <h2> <u>Data Analytics Project/Work</u></h2>
+  <hr size="2" noshade>
         <table cellpadding="10" cellspacing="0">
           <thead>
             <tr>
-                <th align="left">Brief Description</th>
-                <th align="left">Approach</th>
-                <th align="left">Relevant Files</th>
+                <th align="left">Experties</th>
+                <th align="left"></th>
+                <th align="left"></th>
             </tr>
             </thead>
             <tr>
-              <td>Marketing Strategies Aimed at Converting Casual Riders.<br> into Annual Members.
-                  For Bike Sharing Company</td>
-              <td> Data available from 2020-2023. Analysis was done for single Quarter.<br>
-                  Analysis can be scaled to reaming data set just adding more data set<br>
-                  <li> Cleaning performed in Python(Pandas) </li>
-                  <li> Data Viz in Tableau and R(ggplot2) </li>
-              </td>
-              <td> <li> <a href="datanalytics/1CaseStudy/1python.html">Data Cleaning</a></li>
-                    <li> <a href="datanalytics/1CaseStudy/2RDataViz.html">DataViz R</a></li>
-                    <li> <a href="https://drive.google.com/file/d/1B8jnsOR-9WYrFTHHzN3Ur9r7NSLmkvzI/view?usp=sharing">Slides</a></li>
-              </td>
-          </tr>
+              <td>Beautiful Soup, Selenium, Scrapy </td>
+            </tr>
             <tr>
-              <td>Scrape & Analysis data on used vans for sale in the UK</td>
-              <td>Details being updated</td>
-              <td> being updated </td>
-          </tr>
-            <tr>
-              <td>Vintage Cars Investment</td>
-              <td>Details being updated</td>
-              <td> being updated </td>
-          </tr>
-        </table>
-        <br><br>
-      <hr size="2" noshade>
+              <td>IP rotation, avoid detection, deploy crawler into cloud</td>
+            </tr>
 
-        <h2><u>Web Scrapping Projects</u></h2>
-        <table cellpadding="10" cellspacing="0">
+        </table>
+        <hr size="2" noshade>
+  <h2><u>Web Scrapping Projects</u></h2>
+  <table cellpadding="10" cellspacing="0">
           <thead>
             <tr>
                 <th align="left">Brief Description</th>
@@ -64,38 +44,7 @@
               <td> Details Being Updated</td>
           </tr>
         </table>
-    <hr size="2" noshade>
-  <br><br>
-        <h2><u>Python Software Development</u></h2>
-        <table cellpadding="10" cellspacing="0">
-          <thead>
-            <tr>
-                <th align="left">Brief Description</th>
-                <th align="left">Approach</th>
-                <th align="left">Relevant Files</th>
-            </tr>
-            </thead>
-            <tr>
-              <td>Flight Search with API and SMS Alert through TWILLO</td>
-              <td>Used API:<br>
-                  Sheety for Gsheet<br>
-                  TEQUILA_API for flight search<br>
-                  programmatically sending SMS with Twillo API<br>
-                  Used OOP(object Oriented Programming)
-              </td>
-              <td> <a href="https://github.com/hasank09/Python/blob/main/Twillo-api/readme.md">Project File</a></td>
-          </tr>
-            <tr>
-              <td>Google Search API</td>
-              <td> Programmatically get search result<br>
-                  usage as per need for example : lead generation and etc
-              </td>
-              <td> <a href="https://github.com/hasank09/Python/blob/main/Googleapi/readme.md">Project File</a></td>
-          </tr>
-        </table>
-        <hr size="2" noshade>
-        <br><br>
-
+  <hr size="2" noshade>
 
   </body>
 </html>
