--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
               <td> <a href="projects/data_analytics.html">Data Analytics</a> </td>
           </tr>
           <tr>
-              <td> <a href="projects/python.html">Web Scrapping</a> </td>
+              <td> <a href="projects/webscrapping.html">Web Scrapping</a> </td>
           </tr>
           <tr>
-              <td> <a href="projects/webscrapping.html">Python Development</a> </td>
+              <td> <a href="projects/python.html">Python Development</a> </td>
           </tr>
           </tbody>
         </table>
