--- a/projects/python.html
+++ b/projects/python.html
@@ -64,6 +64,21 @@
               <td> Create Quiz game from Open TRIVA  database with more than 4000 question </td>
               <td> <a href="https://github.com/hasank09/Python/blob/main/Tkinter_QuizGame/readme.md">Project File</a></td>
           </tr>
+            <tr>
+              <td>Your Own Movie rating website</td>
+              <td> Don't have to put data manual just get search movie title via API and build it </td>
+              <td> <a href="https://github.com/hasank09/Top10MovieWebsite/blob/master/readme.md">Project File</a></td>
+          </tr>
+            <tr>
+              <td>REST API</td>
+              <td> Create your own REST API with all actions and authenticate operation with key </td>
+              <td> <a href="https://github.com/hasank09/RestAPI_sample/blob/master/readme.md">Project File</a></td>
+          </tr>
+            <tr>
+              <td>Personal Blog Website</td>
+              <td> can be used with local network or deploy on any cloud platform , <br>for more details see files</td>
+              <td> <a href="https://github.com/hasank09/Blogwebsite/blob/master/readme.md">Project File</a></td>
+          </tr>
         </table>
         <hr size="2" noshade>
 
