--- a/index.html
+++ b/index.html
@@ -180,20 +180,20 @@
             <tbody>
                 <tr>
                     <td>2021 - Present </td>
-                    <td>Development Technical Team lead for R&D Projects at NESCOM </td>
+                    <td>Development Technical Team lead for R&D Projects at Stingray Technologies</td>
                 </tr>
                 <tr>
                     <td>2021 </td>
-                    <td>Promoted to General Manager(Technical) at NESCOM</td>
+                    <td>Promoted to General Manager(Technical) at Stingray Technologies</td>
                 </tr>
                 <tr>
                     <td>2015</td>
-                    <td>Promoted to Manager(Technical) at NESCOM</td>
+                    <td>Promoted to Manager(Technical) at Stingray Technologies</td>
                 </tr>
 
                 <tr>
                     <td>2011 - 2013</td>
-                    <td>Under Water Communication system in collaboration with NESCOM at Wuhan,China</td>
+                    <td>Underwater Communication system at China</td>
                 </tr>
                 <tr>
                     <td>2010</td>
@@ -201,7 +201,7 @@
                 </tr>
                 <tr>
                     <td>2009</td>
-                    <td>Joined National Engineering and Scientific Commission (NESCOM), as Assistant Manager (Technical)  </td>
+                    <td>Joined Stingray Technologies, as Assistant Manager (Technical)  </td>
                 </tr>
 
             </tbody>
