--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             </ul>
         </ul>
       <hr size="2" noshade>
-      <a href="hobbies.html" >LinkedIn</a>
-      <a href="https://hasank09.github.io/profile/">GitHub</a>
+      <a href="www.linkedin.com/in/m-h-65b569214" >LinkedIn</a>
+      <a href="https://github.com/hasank09">GitHub</a>
       <a href="https://www.kaggle.com/muhammadhasankhokahr">Kaggle</a>
   </body>
 </html>
