--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </table>
         Love for a ☕coffee and 🚗 Travel
         <hr size="2" noshade>
-        <p> I am an accomplished Electronic Engineer with 13 years of experience in digital circuit design,
-            embedded systems, and marine engineering.
+        <p> I am an accomplished Electronic Engineer with 13 years of experience in Digital Circuit Design,
+            Embedded Systems, and Marine Electronic Engineering.
             <br>My passion for programming led me to embrace Python,
             opening new horizons in data analytics and software development
         </p>
