--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Love for a ☕coffee and 🚗 Travel
         <hr size="2" noshade>
         <p> I am an accomplished Electronic Engineer with 13 years of experience in Digital Circuit Design,
-            Embedded Systems, and Marine Electronic Engineering.
+            Embedded Systems and Marine Electronic Engineering.
             <br>My passion for programming led me to embrace Python,
             opening new horizons in data analytics and software development
         </p>
