--- a/projects/python.html
+++ b/projects/python.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Hasan</title>
+    <title>Python Dev</title>
       <link rel="stylesheet" href="../css/style.css">
 <!--      <link rel="icon" href="/favicon.ico">-->
         <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
