--- a/projects/webscrapping.html
+++ b/projects/webscrapping.html
@@ -35,14 +35,67 @@
             <tr>
                 <th align="left">Brief Description</th>
                 <th align="left">Approach</th>
-                <th align="left">Relevant Files</th>
+                <th align="left">Scrapped sample data</th>
             </tr>
             </thead>
             <tr>
-              <td>Details Being Updated</td>
-              <td>Details Being Updated</td>
-              <td> Details Being Updated</td>
+              <td>1Million product Amazon(UAE) Product<br>
+                  <a href="https://www.amazon.ae/gp/browse.html?node=11497860031&ref_=nav_em_by_all_0_2_11_2">Target-website</a>
+              </td>
+              <td>Prepared the script and deployed scrapy Cloud (Zyte)<br>
+                  formerly knows as Crawlera</td>
+              <td><a href="https://docs.google.com/spreadsheets/d/1-hNQ8mQnruSmNGSFCCmaLxEvRy2x03qAfkawmNmIMVY/edit?usp=drive_link">scrapped sample</a></td>
           </tr>
+            <tr>
+              <td>Australia based RealEstate, required listing that sold<br>
+                  <a href="https://www.realestate.com.au/">Target-website</a>
+              </td>
+              <td>website uses Kasada and Akamai for protection which <br>makes difficult to scrape. But able to scrap the required  </td>
+              <td><a href="https://drive.google.com/file/d/11AMFXCqkbao0N46Ovt5WGye1KnpYItpW/view?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>Scrape & Analysis data on used vans for sale in the UK<br>
+                  <a href="https://www.motors.co.uk/">Target-website</a>
+              </td>
+              <td>Through API json request manipulation  with ZyteAPI <br> Analysis done look into Data Project file   </td>
+              <td><a href="https://drive.google.com/file/d/1Zs1QTnwn_JU38f36T0BihIJWAA6BeEHp/view?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>Job For 'Autopart' with input search<br>
+                  <a href="https://www.vpartsinc.com/">Target-website</a>
+              </td>
+              <td>Built the solution where client can input the desired category </td>
+              <td><a href="https://docs.google.com/spreadsheets/d/1h9iU5NWADAP5CQ7ooesD8SMCwl2wp_xCx0A29kbibg8/edit?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>10 years historical data ,U.S. API Weekly Crude Stock <br>
+                  <a href="https://in.investing.com/economic-calendar/api-weekly-crude-stock-656">Target-website</a>
+              </td>
+              <td>Using scrolling API response was in JSON </td>
+              <td><a href="https://docs.google.com/spreadsheets/d/1u2ysKxlcKBzHADAfG5_9hpNphQGu_KwOjuJto0O6rgM/edit?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>Restaurant ordering menu for mexico based with price  <br>
+                  <a href="https://demoazulmexicanosummerville.onlineordersnow.com/MenuDisplay">Target-website</a>
+              </td>
+              <td>All menu with description and price </td>
+              <td><a href="https://drive.google.com/file/d/1Z7r9luErRX9OdiJs7ZVDM5a7_LMC7gSM/view?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>Profile details for business listed on german website <br>
+                  <a href="https://www.knx.org/knx-de/fuer-fachleute/community/partner/?country=">Target-website</a>
+              </td>
+              <td>extracted but sample data is anonymized for privacy concer </td>
+              <td><a href="https://drive.google.com/file/d/1rQwD6kF4_tYORZ3NDy2ALJN-3SK3-x8d/view?usp=sharing">scrapped sample</a></td>
+          </tr>
+            <tr>
+              <td>Required 2000 Restaurant Email in Europe<br>
+                  <a href="https://www.myswitzerland.com/en-ae/experiences/food-wine/restaurant-choice-search/">Target-website</a>
+              </td>
+              <td>Able to get more than 7000 contact details</td>
+              <td><a href="https://drive.google.com/file/d/1Dk9gpHD9fc2gZ6Sg-4eWXOiBDjNIrIED/view?usp=sharing">scrapped sample</a></td>
+          </tr>
+
         </table>
   <hr size="2" noshade>
 
