--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
 
 
 
-      </table>
-
       <hr size="2" noshade>
 
       <h2>Course/Certification</h2>
@@ -107,6 +105,13 @@
             </thead>
           <tr>
               <td>2023</td>
+              <td>[PCEP-30-02] PCEP <br> Certified Entry-Level Python Programme</td>
+              <td> <a href="https://www.credly.com/badges/54956820-70bb-4296-9420-b933554ec5be/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
+                    <a href="https://verify.openedg.org/?id=Xurv.dTOX.wJqh" target="_blank">Python Insitute </a>
+              </td>
+          </tr>
+          <tr>
+              <td>2023</td>
               <td>Google Data Analytics Certificate</td>
               <td> <a href="https://www.credly.com/badges/2da1f7e8-4197-4ff6-b042-65377034e4d7" target="_blank">Coursera - Accreditation Credly by Pearson</a> <br>
                     <a href="https://coursera.org/verify/professional-cert/3GMTLFDAWRDR" target="_blank">Coursera </a>
@@ -114,9 +119,21 @@
           </tr>
           <tr>
               <td>2023</td>
+              <td>Data Analysis With Python</td>
+               <td><a href="https://www.credly.com/badges/dca68bcb-5772-459b-98be-500a1accda7b/public_url" target="_blank">IBM Certificate-1</a>,
+                   <a href="https://www.credly.com/badges/11da7a74-7e2e-4669-8160-df400740d957/public_url" target="_blank">IBM Certificate-2</a>,
+                   <a href="https://www.credly.com/badges/1c1d2474-63b8-44f8-bc1f-2e97d7b0d31a/public_url" target="_blank">IBM Certificate-3</a>,
+                   <a href="https://www.credly.com/badges/cd41b536-a3dd-4ba5-8046-af107888ef3a/public_url" target="_blank">IBM Certificate-4</a>,
+               </td>
+          </tr>
+          <tr>
+              <td>2023</td>
               <td>Data Analysis With R Programming</td>
-               <td><a href="https://coursera.org/verify/HTHBND7UQUDZ"
-                      target="_blank">Coursera</a></td>
+               <td><a href="https://www.credly.com/badges/7c430d49-7031-425b-80b2-72f85c62389f/public_url" target="_blank">IBM Certificate-1</a>,
+                   <a href="https://www.credly.com/badges/30f18f0f-86b0-42d4-b1a2-8e255120204d/public_url" target="_blank">IBM Certificate-2</a>,
+                   <a href="https://www.credly.com/badges/ef9446ce-912d-4185-a85a-82df58b918f9/public_url" target="_blank">IBM Certificate-3</a>,
+                   <a href="https://www.credly.com/badges/c1121566-7828-4250-a5e7-e2e9014a730d/public_url" target="_blank">IBM Certificate-4</a>,
+               </td>
           </tr>
           <tr>
               <td>2023</td>
