added the gps stream data

--- a/projects/python.html
+++ b/projects/python.html
@@ -43,6 +43,16 @@
             </tr>
             </thead>
             <tr>
+              <td>GPS Streaming and desktop app Development</td>
+              <td>The goal of this project is to develop a software solution for acquiring,<br>
+                  processing, and outputting GPS data streams.
+                  <br>The software will handle various data acquisition methods <br>
+                  parse and format the GPS data convert it into specified units of measurement
+                  <br>, and output the processed data in an Excel-compatible format
+              </td>
+              <td> <a href="https://github.com/hasank09/GPS_Streamear-Desktop-app/edit/main/README.md">Project File</a></td>
+          </tr>
+            <tr>
               <td>Flight Search with API and SMS Alert through TWILLO</td>
               <td>Used API:<br>
                   Sheety for Gsheet<br>
