--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
             <tbody>
                 <tr>
                     <td>2021 - Present </td>
-                    <td>Development Technical Team lead for R&D Projects at Stingray Technologies</td>
+                    <td>Development Technical Team lead for R&D Projects at National Engineering and Scientific Commission (NESCOM)</td>
                 </tr>
                 <tr>
                     <td>2021 </td>
-                    <td>Promoted to General Manager(Technical) at Stingray Technologies</td>
+                    <td>Promoted to General Manager(Technical) at National Engineering and Scientific Commission (NESCOM)</td>
                 </tr>
                 <tr>
                     <td>2015</td>
-                    <td>Promoted to Manager(Technical) at Stingray Technologies</td>
+                    <td>Promoted to Manager(Technical) at National Engineering and Scientific Commission (NESCOM)</td>
                 </tr>
 
                 <tr>
@@ -213,12 +213,8 @@
                     <td>Underwater Communication system at China</td>
                 </tr>
                 <tr>
-                    <td>2010</td>
-                    <td>Trained on Master Control Systems for ships at MTU Friedrichshafen, Germany </td>
-                </tr>
-                <tr>
                     <td>2009</td>
-                    <td>Joined Stingray Technologies, as Assistant Manager (Technical)  </td>
+                    <td>Joined National Engineering and Scientific Commission (NESCOM), as Assistant Manager (Technical)  </td>
                 </tr>
 
             </tbody>
