--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             </thead>
           <tr>
               <td>2023</td>
-              <td>[PCEP-30-02] PCEP <br> Certified Entry-Level Python Programme</td>
+              <td>[PCEP-30-02] PCEP <br> Certified Entry-Level Python Program</td>
               <td> <a href="https://www.credly.com/badges/54956820-70bb-4296-9420-b933554ec5be/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
-                    <a href="https://verify.openedg.org/?id=Xurv.dTOX.wJqh" target="_blank">Python Insitute </a>
+                    <a href="https://verify.openedg.org/?id=Xurv.dTOX.wJqh" target="_blank">Python Institute </a>
               </td>
           </tr>
           <tr>
@@ -119,7 +119,7 @@
           </tr>
           <tr>
               <td>2023</td>
-              <td>Data Analysis With Python</td>
+              <td>Data Analysis with Python</td>
                <td><a href="https://www.credly.com/badges/dca68bcb-5772-459b-98be-500a1accda7b/public_url" target="_blank">IBM Certificate-1</a>,
                    <a href="https://www.credly.com/badges/11da7a74-7e2e-4669-8160-df400740d957/public_url" target="_blank">IBM Certificate-2</a>,
                    <a href="https://www.credly.com/badges/1c1d2474-63b8-44f8-bc1f-2e97d7b0d31a/public_url" target="_blank">IBM Certificate-3</a>,
