--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </tr>
           <tr>
               <td>2011-2013</td>
-              <td>Under Water Communication</td>
+              <td>Underwater Communication</td>
               <td>at Wuhan,China</td>
           </tr>
           <tr>
@@ -197,15 +197,15 @@
             <tbody>
                 <tr>
                     <td>2021 - Present </td>
-                    <td>Development Technical Team lead for R&D Projects at National Engineering and Scientific Commission (NESCOM)</td>
+                    <td>Development Technical Team lead for R&D Projects at Stingray Technologies</td>
                 </tr>
                 <tr>
                     <td>2021 </td>
-                    <td>Promoted to General Manager(Technical) at National Engineering and Scientific Commission (NESCOM)</td>
+                    <td>Promoted to General Manager(Technical) at Stingray Technologies</td>
                 </tr>
                 <tr>
                     <td>2015</td>
-                    <td>Promoted to Manager(Technical) at National Engineering and Scientific Commission (NESCOM)</td>
+                    <td>Promoted to Manager(Technical) at Stingray Technologies</td>
                 </tr>
 
                 <tr>
@@ -214,7 +214,7 @@
                 </tr>
                 <tr>
                     <td>2009</td>
-                    <td>Joined National Engineering and Scientific Commission (NESCOM), as Assistant Manager (Technical)  </td>
+                    <td>Joined Stingray Technologies, as Assistant Manager (Technical)  </td>
                 </tr>
 
             </tbody>
