--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
             </tr>
             </thead>
           <tr>
+              <td>2024</td>
+              <td>[PCAP-31-03] PCAP <br> Certified Associate Python Programmer</td>
+              <td> <a href="https://www.credly.com/badges/dff72796-e213-4411-b574-be09e46d57fd/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
+                    <a href="https://verify.openedg.org/?id=JjA8.7mvu.x3O6" target="_blank">Python Institute </a>
+              </td>
+          </tr>
+          <tr>
               <td>2023</td>
               <td>[PCEP-30-02] PCEP <br> Certified Entry-Level Python Program</td>
               <td> <a href="https://www.credly.com/badges/54956820-70bb-4296-9420-b933554ec5be/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
