16 Feb 2025 - Change the layout

--- a/index.html
+++ b/index.html
@@ -91,107 +91,23 @@
         </table>
 
 
-
       <hr size="2" noshade>
 
       <h2>Course/Certification</h2>
-      <table cellpadding="10" cellspacing="0">
-          <thead>
-            <tr>
-                <th align="left">Year</th>
-                <th align="left">Course Name</th>
-                <th align="left">Provider</th>
-            </tr>
-            </thead>
+
+      <table cellpadding="5" cellspacing="0">
+          <tbody>
           <tr>
-              <td>2024</td>
-              <td>[PCAP-31-03] PCAP <br> Certified Associate Python Programmer</td>
-              <td> <a href="https://www.credly.com/badges/dff72796-e213-4411-b574-be09e46d57fd/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
-                    <a href="https://verify.openedg.org/?id=JjA8.7mvu.x3O6" target="_blank">Python Institute </a>
-              </td>
+              <td> <a href="course_certificate/Certificates.html">Certificates</a> </td>
           </tr>
           <tr>
-              <td>2023</td>
-              <td>[PCEP-30-02] PCEP <br> Certified Entry-Level Python Program</td>
-              <td> <a href="https://www.credly.com/badges/54956820-70bb-4296-9420-b933554ec5be/public_url" target="_blank">Accreditation Credly by Pearson</a> <br>
-                    <a href="https://verify.openedg.org/?id=Xurv.dTOX.wJqh" target="_blank">Python Institute </a>
-              </td>
-          </tr>
-          <tr>
-              <td>2023</td>
-              <td>Google Data Analytics Certificate</td>
-              <td> <a href="https://www.credly.com/badges/2da1f7e8-4197-4ff6-b042-65377034e4d7" target="_blank">Coursera - Accreditation Credly by Pearson</a> <br>
-                    <a href="https://coursera.org/verify/professional-cert/3GMTLFDAWRDR" target="_blank">Coursera </a>
-              </td>
-          </tr>
-          <tr>
-              <td>2023</td>
-              <td>Data Analysis with Python</td>
-               <td><a href="https://www.credly.com/badges/dca68bcb-5772-459b-98be-500a1accda7b/public_url" target="_blank">IBM Certificate-1</a>,
-                   <a href="https://www.credly.com/badges/11da7a74-7e2e-4669-8160-df400740d957/public_url" target="_blank">IBM Certificate-2</a>,
-                   <a href="https://www.credly.com/badges/1c1d2474-63b8-44f8-bc1f-2e97d7b0d31a/public_url" target="_blank">IBM Certificate-3</a>,
-                   <a href="https://www.credly.com/badges/cd41b536-a3dd-4ba5-8046-af107888ef3a/public_url" target="_blank">IBM Certificate-4</a>,
-               </td>
-          </tr>
-          <tr>
-              <td>2023</td>
-              <td>Data Analysis With R Programming</td>
-               <td><a href="https://www.credly.com/badges/7c430d49-7031-425b-80b2-72f85c62389f/public_url" target="_blank">IBM Certificate-1</a>,
-                   <a href="https://www.credly.com/badges/30f18f0f-86b0-42d4-b1a2-8e255120204d/public_url" target="_blank">IBM Certificate-2</a>,
-                   <a href="https://www.credly.com/badges/ef9446ce-912d-4185-a85a-82df58b918f9/public_url" target="_blank">IBM Certificate-3</a>,
-                   <a href="https://www.credly.com/badges/c1121566-7828-4250-a5e7-e2e9014a730d/public_url" target="_blank">IBM Certificate-4</a>,
-               </td>
-          </tr>
-          <tr>
-              <td>2023</td>
-              <td>Hadoop Foundations - Level 1</td>
-               <td><a href="https://www.credly.com/badges/d5e0b544-8204-48bc-8143-5ffc48f2ebbd"
-                      target="_blank">IBM - Accreditation Credly by Pearson</a></td>
-          </tr>
-          <tr>
-              <td>2023</td>
-              <td>Python Essentials 1</td>
-               <td><a href="https://www.credly.com/badges/35d85bf5-e5f6-410f-9696-920fa38e15cb"
-                      target="_blank">Cisco - Accreditation Credly by Pearson</a></td>
-          </tr>
-          <tr>
-              <td>2022</td>
-              <td>Cyber Security Fundamental Course</td>
-               <td><a href="https://drive.google.com/file/d/1xI3yw2R3kCOmuWiQbhiKuw7CE8H2_B8d/view" target="_blank">LUMS-Lahore University of Management Sciences</a></td>
-          </tr>
-          <tr>
-              <td>2022</td>
-              <td>Data Science and Machine Learning Using Python</td>
-              <td><a href="https://drive.google.com/file/d/1BH4rLtlKmQtw4I-Ckf9h8DsFPuGixstc/view" target="_blank">LUMS-Lahore University of Management Sciences</a></td>
-          </tr>
-          <tr>
-              <td>2022</td>
-              <td>Microsoft Access </td>
-              <td><a href="https://www.udemy.com/certificate/UC-6764ce20-c393-4d70-83bf-9fb2153cadc2/" target="_blank">Udemy</a></td>
-          </tr>
-          <tr>
-              <td>2021</td>
-              <td>Artificial Intelligence for IT and NON-IT Professional </td>
-              <td><a href="https://drive.google.com/file/d/1Q2jnK1HElRUBYSTF2GbobW0jOf12LCb5/view?usp=share_link" target="_blank">Virtual University of Pakistan</a></td>
-          </tr>
-          <tr>
-              <td>2019</td>
-              <td>Excel Essentials: The Complete Excel Series</td>
-              <td><a href="https://www.udemy.com/certificate/UC-M3YQWD47/" target="_blank">Udemy</a></td>
-          </tr>
-          <tr>
-              <td>2011-2013</td>
-              <td>Underwater Communication</td>
-              <td>at Wuhan,China</td>
-          </tr>
-          <tr>
-              <td>2009</td>
-              <td>MTU MCS-5/RCS-5/CE3 System for Ships</td>
-              <td>MTU Friedrichshafen GmbH</td>
+              <td> <a href="course_certificate/Courses.html">Courses</a> </td>
           </tr>
 
-      </table>
-      <hr size="2" noshade>
+          </tbody>
+        </table>
+
+
 
       <h2>Work Experience </h2>
       <table cellpadding="5" cellspacing="0">
